[gd_scene load_steps=7 format=2]

[ext_resource path="res://art/New/omar-npc.png" type="Texture" id=1]
[ext_resource path="res://art/New/bror.wav" type="AudioStream" id=2]
[ext_resource path="res://npc/omar.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.0

[sub_resource type="CircleShape2D" id=2]
radius = 127.004

[sub_resource type="CircleShape2D" id=3]
radius = 59.0

[node name="Omar" type="StaticBody2D"]
collision_mask = 0
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource( 2 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[node name="GotoPosition" type="Position2D" parent="."]
position = Vector2( 70, 0 )

[node name="MoveDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="MoveDetection"]
shape = SubResource( 3 )

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_PlayerDetection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_PlayerDetection_body_exited"]
[connection signal="body_entered" from="MoveDetection" to="." method="_on_MoveDetection_body_entered"]
[connection signal="body_exited" from="MoveDetection" to="." method="_on_MoveDetection_body_exited"]
